begin stripping branding

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -19,13 +19,13 @@
     <div id="header-wrapper">
       <div id="header">
         <div>
-          <a class="logo" href="/"><img src="/images/logo_developer.png" width="255" height="45" /></a>
-          <ul class="nav">
+          <!--a class="logo" href="/"><img src="/images/logo_developer.png" width="255" height="45" /></a-->
+          <!--ul class="nav">
             <li><a href="/v3/">API v3</a></li>
             <li><a href="http://develop.github.com">API v2</a></li>
             <li><a
               href="http://support.github.com/discussions/api">Support</a></li>
-          </ul>
+          </ul-->
         </div>
       </div><!-- #header -->
     </div><!-- #header-wrapper -->
@@ -125,9 +125,9 @@
         <div class="footer_inner clearfix">
 
         <!--[if IE]><h4 id="blacktocat_ie">GitHub Links</h4><![endif]-->
-        <![if !IE]><h4 id="blacktocat">GitHub Links</h4><![endif]>
+        <!--![if !IE]><h4 id="blacktocat">GitHub Links</h4><![endif]-->
 
-        <ul class="footer_nav">
+        <!--ul class="footer_nav">
           <h4>GitHub</h4>
           <li><a href="https://github.com/about">About</a></li>
           <li><a href="https://github.com/blog">Blog</a></li>
@@ -158,34 +158,34 @@
           <li><a href="http://developer.github.com/">Developer API</a></li>
           <li><a href="http://github.github.com/github-flavored-markdown/">GitHub Flavored Markdown</a></li>
           <li><a href="http://pages.github.com/">GitHub Pages</a></li>
-        </ul>
+        </ul-->
 
         </div><!-- /.site -->
       </div><!-- /.upper_footer -->
 
       <div class="lower_footer">
         <div class="footer_inner clearfix">
-            <div id="legal"> 
-              <!--[if IE]><a class="home_ie" href="http://github.com">Home</a><![endif]-->
-              <![if !IE]><a class="home" href="http://github.com">Home</a><![endif]>
+          <div id="legal">
+            <!--[if IE]><a class="home_ie" href="http://github.com">Home</a><![endif]-->
+            <![if !IE]><a class="home" href="http://github.com">Home</a><![endif]>
 
-              <ul id="legal_links">
-                <li><a href="http://help.github.com/terms-of-service/">Terms of Service</a></li>
-                <li><a href="http://help.github.com/privacy-policy/">Privacy</a></li>
-                <li><a href="http://help.github.com/security/">Security</a></li>
-              </ul>
+            <ul id="legal_links">
+              <li><a href="http://help.github.com/terms-of-service/">Terms of Service</a></li>
+              <li><a href="http://help.github.com/privacy-policy/">Privacy</a></li>
+              <li><a href="http://help.github.com/security/">Security</a></li>
+            </ul>
 
-              <p>&copy; <span id="year">year</span> GitHub Inc. All rights reserved.</p>
-            </div><!-- /#legal or /#legal_ie-->
+            <p>&copy; <span id="year">year</span> GitHub Inc. All rights reserved.</p>
+          </div><!-- /#legal or /#legal_ie-->
 
-            <div class="sponsor">
-              <a href="http://www.rackspace.com" class="logo">
-                <img src="/shared/images/rackspace_logo.png" alt="Dedicated Server" width="38" height="36">
-              </a>
-              Powered by the <a href="http://www.rackspace.com ">Dedicated
-              Servers</a> and<br/> <a href="http://www.rackspacecloud.com">Cloud
-              Computing</a> of Rackspace Hosting<span>&reg;</span>
-          </div>
+          <!--div class="sponsor">
+            <a href="http://www.rackspace.com" class="logo">
+              <img src="/shared/images/rackspace_logo.png" alt="Dedicated Server" width="38" height="36">
+            </a>
+            Powered by the <a href="http://www.rackspace.com ">Dedicated
+            Servers</a> and<br/> <a href="http://www.rackspacecloud.com">Cloud
+            Computing</a> of Rackspace Hosting<span>&reg;</span>
+          </div-->
         </div><!-- /.site -->
       </div><!-- /.lower_footer -->
     </div><!-- /#footer -->
