--- a/layouts/default.html
+++ b/layouts/default.html
@@ -38,16 +38,15 @@
     <div id="js-sidebar" class="sidebar-shell">
       <div class="js-toggle-list sidebar-module expandable">
         <ul>
-          <li class="js-topic">
+          <li>
             <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v3/">Summary</a></h3>
-            <ul class="js-guides">
-              <li><a href="/v3/oauth/">OAuth</a></li>
-              <li><a href="/v3/mime/">Mime Types</a></li>
-              <li><a href="/v3/changelog/">Changelog</a></li>
-              <li><a href="/v3/libraries/">Libraries</a></li>
+            <ul>
+              <li><a href="/v1/auth/">OAuth</a></li>
+              <li><a href="/v1/changelog/">Changelog</a></li>
+              <li><a href="/v1/libraries/">Libraries</a></li>
             </ul>
           </li>
-          <li class="js-topic">
+          <!--li class="js-topic">
             <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v3/gists/">Gists</a></h3>
             <ul class="js-guides">
               <li><a href="/v3/gists/comments/">Comments</a></li>
@@ -110,7 +109,7 @@
             <ul class="js-guides">
               <li><a href="/v3/events/types/">Types</a></li>
             </ul>
-          </li>
+          </li-->
         </ul>
       </div> <!-- /sidebar-module -->
       <div class="sidebar-module">
@@ -166,16 +165,14 @@
       <div class="lower_footer">
         <div class="footer_inner clearfix">
           <div id="legal">
-            <!--[if IE]><a class="home_ie" href="http://github.com">Home</a><![endif]-->
-            <![if !IE]><a class="home" href="http://github.com">Home</a><![endif]>
 
             <ul id="legal_links">
-              <li><a href="http://help.github.com/terms-of-service/">Terms of Service</a></li>
-              <li><a href="http://help.github.com/privacy-policy/">Privacy</a></li>
-              <li><a href="http://help.github.com/security/">Security</a></li>
+              <li>Terms of Service</li>
+              <li>Privacy</li>
+              <li>Security</li>
             </ul>
 
-            <p>&copy; <span id="year">year</span> GitHub Inc. All rights reserved.</p>
+            <p>&copy; <span id="year">year</span> Rearden Commerce All rights reserved.</p>
           </div><!-- /#legal or /#legal_ie-->
 
           <!--div class="sponsor">
