--- a/layouts/default.html
+++ b/layouts/default.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Language" content="en-us" />
   <meta http-equiv="imagetoolbar" content="false" />
   <meta name="MSSmartTagsPreventParsing" content="true" />
-  <title><%= @item[:title] %></title>
+  <title><%= @item[:title] %> - OfferEngine API</title>
   <link href="/css/reset.css" rel="stylesheet" type="text/css" />
   <link href="/css/960.css" rel="stylesheet" type="text/css" />
   <link href="/css/uv_active4d.css" rel="stylesheet" type="text/css" />
@@ -39,11 +39,18 @@
       <div class="js-toggle-list sidebar-module expandable">
         <ul>
           <li>
-            <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v3/">Summary</a></h3>
+            <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/">Summary</a></h3>
             <ul>
-              <li><a href="/v1/auth/">OAuth</a></li>
+              <li><a href="/v1/auth/">Auth</a></li>
               <li><a href="/v1/changelog/">Changelog</a></li>
               <li><a href="/v1/libraries/">Libraries</a></li>
+            </ul>
+          </li>
+          <li>
+            <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/users/">Users</a></h3>
+            <ul class="js-guides">
+              <li>Access Tokens</li>
+              <li>Images</li>
             </ul>
           </li>
           <!--li class="js-topic">
@@ -113,7 +120,7 @@
         </ul>
       </div> <!-- /sidebar-module -->
       <div class="sidebar-module">
-        <p>This website is <a href="http://github.com/github/developer.github.com" target="_blank">open source</a>. Please help us by forking the project and adding to it.</p>
+        <p>This website is <a href="https://github.com/demandchain/developer.offerengine.com" target="_blank">open source</a>. Please help us by forking the project and adding to it.</p>
       </div>
     </div><!-- /sidebar-shell -->
 
