--- a/layouts/default.html
+++ b/layouts/default.html
@@ -19,110 +19,42 @@
     <div id="header-wrapper">
       <div id="header">
         <div>
-          <!--a class="logo" href="/"><img src="/images/logo_developer.png" width="255" height="45" /></a-->
-          <!--ul class="nav">
-            <li><a href="/v3/">API v3</a></li>
-            <li><a href="http://develop.github.com">API v2</a></li>
-            <li><a
-              href="http://support.github.com/discussions/api">Support</a></li>
-          </ul-->
+          <ul class="nav">
+            <li><a href="javascript:">Support</a></li>
+          </ul>
         </div>
       </div><!-- #header -->
     </div><!-- #header-wrapper -->
 
     <div id="wrapper">
       <div class="content">
-    <%= yield %>
+        <%= yield %>
       </div>
 
-    <div id="js-sidebar" class="sidebar-shell">
-      <div class="js-toggle-list sidebar-module expandable">
-        <ul>
-          <li>
-            <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/">Summary</a></h3>
-            <ul>
-              <li><a href="/v1/auth/">Auth</a></li>
-              <li><a href="/v1/changelog/">Changelog</a></li>
-              <li><a href="/v1/libraries/">Libraries</a></li>
-            </ul>
-          </li>
-          <li>
-            <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/users/">Users</a></h3>
-            <ul class="js-guides">
-              <li>Access Tokens</li>
-              <li>Images</li>
-            </ul>
-          </li>
-          <!--li class="js-topic">
-            <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v3/gists/">Gists</a></h3>
-            <ul class="js-guides">
-              <li><a href="/v3/gists/comments/">Comments</a></li>
-            </ul>
-          </li>
-          <li class="js-topic">
-            <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v3/git/">Git Data</a></h3>
-            <ul class="js-guides">
-              <li><a href="/v3/git/blobs/">Blobs</a></li>
-              <li><a href="/v3/git/commits/">Commits</a></li>
-              <li><a href="/v3/git/refs/">References</a></li>
-              <li><a href="/v3/git/tags/">Tags</a></li>
-              <li><a href="/v3/git/trees/">Trees</a></li>
-            </ul>
-          </li>
-          <li class="js-topic">
-            <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v3/issues/">Issues</a></h3>
-            <ul class="js-guides">
-              <li><a href="/v3/issues/comments/">Comments</a></li>
-              <li><a href="/v3/issues/events/">Events</a></li>
-              <li><a href="/v3/issues/labels/">Labels</a></li>
-              <li><a href="/v3/issues/milestones/">Milestones</a></li>
-            </ul>
-          </li>
-          <li class="js-topic">
-            <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v3/orgs/">Orgs</a></h3>
-            <ul class="js-guides">
-              <li><a href="/v3/orgs/members/">Members</a></li>
-              <li><a href="/v3/orgs/teams/">Teams</a></li>
-            </ul>
-          </li>
-          <li class="js-topic">
-            <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v3/pulls/">Pull Requests</a></h3>
-            <ul class="js-guides">
-              <li><a href="/v3/pulls/comments/">Review Comments</a></li>
-            </ul>
-          </li>
-          <li class="js-topic">
-            <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v3/repos/">Repos</a></h3>
-            <ul class="js-guides">
-              <li><a href="/v3/repos/collaborators/">Collaborators</a></li>
-              <li><a href="/v3/repos/commits/">Commits</a></li>
-              <li><a href="/v3/repos/downloads/">Downloads</a></li>
-              <li><a href="/v3/repos/forks/">Forks</a></li>
-              <li><a href="/v3/repos/keys/">Keys</a></li>
-              <li><a href="/v3/repos/watching/">Watching</a></li>
-              <li><a href="/v3/repos/hooks/">Hooks</a></li>
-            </ul>
-          </li>
-          <li class="js-topic">
-            <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v3/users/">Users</a></h3>
-            <ul class="js-guides">
-              <li><a href="/v3/users/emails/">Emails</a></li>
-              <li><a href="/v3/users/followers/">Followers</a></li>
-              <li><a href="/v3/users/keys/">Keys</a></li>
-            </ul>
-          </li>
-          <li class="js-topic">
-            <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/v3/events/">Events</a></h3>
-            <ul class="js-guides">
-              <li><a href="/v3/events/types/">Types</a></li>
-            </ul>
-          </li-->
-        </ul>
-      </div> <!-- /sidebar-module -->
-      <div class="sidebar-module">
-        <p>This website is <a href="https://github.com/demandchain/developer.offerengine.com" target="_blank">open source</a>. Please help us by forking the project and adding to it.</p>
-      </div>
-    </div><!-- /sidebar-shell -->
+      <div id="js-sidebar" class="sidebar-shell">
+        <div class="js-toggle-list sidebar-module expandable">
+          <ul>
+            <li>
+              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/">Summary</a></h3>
+              <ul>
+                <li><a href="/v1/auth/">Auth</a></li>
+                <li><a href="/v1/changelog/">Changelog</a></li>
+                <li><a href="/v1/libraries/">Libraries</a></li>
+              </ul>
+            </li>
+            <li>
+              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/users/">Users</a></h3>
+              <ul>
+                <li><a href="/v1/users/access_tokens/">Access Tokens</a></li>
+                <li><a href="/v1/users/images/">Images</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div> <!-- /sidebar-module -->
+        <div class="sidebar-module">
+          <p>This website is <a href="https://github.com/demandchain/developer.offerengine.com" target="_blank">open source</a>. Please help us by forking the project and adding to it.</p>
+        </div>
+      </div><!-- /sidebar-shell -->
 
     </div><!-- #wrapper -->
 
