--- a/layouts/default.html
+++ b/layouts/default.html
@@ -48,6 +48,7 @@
                 <li><a href="/v1/users/access_tokens/">Access Tokens</a></li>
                 <li><a href="/v1/users/images/">Images</a></li>
               </ul>
+              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/purchases/">Purchases</a></h3>
             </li>
           </ul>
         </div> <!-- /sidebar-module -->
