--- a/layouts/default.html
+++ b/layouts/default.html
@@ -49,6 +49,7 @@
                 <li><a href="/v1/users/images/">Images</a></li>
               </ul>
               <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/purchases/">Purchases</a></h3>
+              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/deals/">Deals</a></h3>
             </li>
           </ul>
         </div> <!-- /sidebar-module -->
