--- a/layouts/default.html
+++ b/layouts/default.html
@@ -50,6 +50,7 @@
               </ul>
               <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/purchases/">Purchases</a></h3>
               <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/deals/">Deals</a></h3>
+              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/card_links/">Card Links</a></h3>
             </li>
           </ul>
         </div> <!-- /sidebar-module -->
