--- a/layouts/default.html
+++ b/layouts/default.html
@@ -47,6 +47,7 @@
               <ul>
                 <li><a href="/v1/users/access_tokens/">Access Tokens</a></li>
                 <li><a href="/v1/users/images/">Images</a></li>
+                <li><a href="/v1/users/coupons/">Coupons</a></li>
               </ul>
               <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/purchases/">Purchases</a></h3>
               <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/deals/">Deals</a></h3>
