--- a/layouts/default.html
+++ b/layouts/default.html
@@ -49,9 +49,9 @@
                 <li><a href="/v1/users/images/">Images</a></li>
                 <li><a href="/v1/users/coupons/">Coupons</a></li>
               </ul>
-              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/purchases/">Purchases</a></h3>
-              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/deals/">Deals</a></h3>
-              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/card_links/">Card Links</a></h3>
+              <h3><a href="/v1/purchases/">Purchases</a></h3>
+              <h3><a href="/v1/deals/">Deals</a></h3>
+              <h3><a href="/v1/card_links/">Card Links</a></h3>
             </li>
           </ul>
         </div> <!-- /sidebar-module -->
