--- a/layouts/default.html
+++ b/layouts/default.html
@@ -52,6 +52,7 @@
               <h3><a href="/v1/purchases/">Purchases</a></h3>
               <h3><a href="/v1/deals/">Deals</a></h3>
               <h3><a href="/v1/card_links/">Card Links</a></h3>
+              <h3><a href="/v1/saved_deals/">Saved Deals</a></h3>
             </li>
           </ul>
         </div> <!-- /sidebar-module -->
