--- a/layouts/default.html
+++ b/layouts/default.html
@@ -49,11 +49,26 @@
                 <li><a href="/v1/users/images/">Images</a></li>
                 <li><a href="/v1/users/coupons/">Coupons</a></li>
               </ul>
+            </li>
+            <li>
               <h3><a href="/v1/purchases/">Purchases</a></h3>
+            </li>
+            <li>
               <h3><a href="/v1/deals/">Deals</a></h3>
+            </li>
+            <li>
+              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/regions/">Regions</a></h3>
+              <ul>
+                <li><a href="/v1/regions/deals/">Deals</a></li>
+              </ul>
+            </li>
+            <li>
               <h3><a href="/v1/card_links/">Card Links</a></h3>
+            </li>
+            <li>
               <h3><a href="/v1/saved_deals/">Saved Deals</a></h3>
             </li>
+
           </ul>
         </div> <!-- /sidebar-module -->
         <div class="sidebar-module">
