--- a/layouts/default.html
+++ b/layouts/default.html
@@ -68,7 +68,9 @@
             <li>
               <h3><a href="/v1/saved_deals/">Saved Deals</a></h3>
             </li>
-
+            <li>
+              <h3><a href="/v1/subscriptions/">Subscriptions</a></h3>
+            </li>
           </ul>
         </div> <!-- /sidebar-module -->
         <div class="sidebar-module">
