added user card links and saved deals

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -48,6 +48,8 @@
                 <li><a href="/v1/users/access_tokens/">Access Tokens</a></li>
                 <li><a href="/v1/users/images/">Images</a></li>
                 <li><a href="/v1/users/coupons/">Coupons</a></li>
+                <li><a href="/v1/users/card_links/">Card Links</a></li>
+                <li><a href="/v1/users/saved_deals/">Saved Deals</a></li>
               </ul>
             </li>
             <li>
