--- a/layouts/default.html
+++ b/layouts/default.html
@@ -35,12 +35,7 @@
         <div class="js-toggle-list sidebar-module expandable">
           <ul>
             <li>
-              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/">Summary</a></h3>
-              <ul>
-                <li><a href="/v1/auth/">Auth</a></li>
-                <li><a href="/v1/changelog/">Changelog</a></li>
-                <li><a href="/v1/libraries/">Libraries</a></li>
-              </ul>
+              <h3><a href="/">Home</a></h3>
             </li>
             <li>
               <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/users/">Users</a></h3>
