port over all remaining calls from the old PDF document:
- region activity

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -54,9 +54,13 @@
               <h3><a href="/v1/deals/">Deals</a></h3>
             </li>
             <li>
-              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/v1/regions/">Regions</a></h3>
+              <h3>
+                <a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a>
+                <a href="/v1/regions/">Regions</a>
+              </h3>
               <ul>
                 <li><a href="/v1/regions/deals/">Deals</a></li>
+                <li><a href="/v1/regions/activity/">Activity</a></li>
               </ul>
             </li>
             <li>
