port over all remaining calls from the old PDF document:
- user credit cards
- user purchases
- user shipping address

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -45,6 +45,9 @@
                 <li><a href="/v1/users/coupons/">Coupons</a></li>
                 <li><a href="/v1/users/card_links/">Card Links</a></li>
                 <li><a href="/v1/users/saved_deals/">Saved Deals</a></li>
+                <li><a href="/v1/users/purchases/">Purchases</a></li>
+                <li><a href="/v1/users/credit_cards/">Credit Cards</a></li>
+                <li><a href="/v1/users/shipping_addresses/">Shipping Addresses</a></li>
               </ul>
             </li>
             <li>
