--- a/layouts/default.html
+++ b/layouts/default.html
@@ -54,7 +54,13 @@
               <h3><a href="/v1/purchases/">Purchases</a></h3>
             </li>
             <li>
-              <h3><a href="/v1/deals/">Deals</a></h3>
+              <h3>
+                <a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a>
+                <a href="/v1/deals/">Deals</a>
+              </h3>
+              <ul>
+                <li><a href="/v1/deals/discussions/">Discussions</a></li>
+              </ul>
             </li>
             <li>
               <h3>
