move subscriptions under users

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -48,6 +48,7 @@
                 <li><a href="/v1/users/purchases/">Purchases</a></li>
                 <li><a href="/v1/users/saved_deals/">Saved Deals</a></li>
                 <li><a href="/v1/users/shipping_addresses/">Shipping Addresses</a></li>
+                <li><a href="/v1/users/subscriptions/">Subscriptions</a></li>
               </ul>
             </li>
             <li>
@@ -71,9 +72,6 @@
                 <li><a href="/v1/regions/deals/">Deals</a></li>
                 <li><a href="/v1/regions/activity/">Activity</a></li>
               </ul>
-            </li>
-            <li>
-              <h3><a href="/v1/subscriptions/">Subscriptions</a></h3>
             </li>
           </ul>
         </div> <!-- /sidebar-module -->
