--- a/layouts/default.html
+++ b/layouts/default.html
@@ -50,6 +50,9 @@
               <h3><a href="/v1/purchases/">Purchases</a></h3>
             </li>
             <li>
+              <h3><a href="/v1/sessions/">Sessions</a></h3>
+            </li>
+            <li>
               <h3>
                 <a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a>
                 <a href="/v1/regions/">Regions</a>
