--- a/layouts/default.html
+++ b/layouts/default.html
@@ -50,7 +50,13 @@
               <h3><a href="/v1/purchases/">Purchases</a></h3>
             </li>
             <li>
-              <h3><a href="/v1/sessions/">Sessions</a></h3>
+              <h3>
+                <a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a>
+                <a href="/v1/sessions/">Sessions</a>
+              </h3>
+              <ul>
+                <li><h3><a href="/v1/sessions/leads/">Leads</a></h3></li>
+              </ul>
             </li>
             <li>
               <h3>
