--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta http-equiv="Content-Language" content="en-us" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=1020, maximum-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  
   <meta http-equiv="imagetoolbar" content="false" />
   <meta name="MSSmartTagsPreventParsing" content="true" />
   
@@ -117,6 +119,6 @@
 
 <script src="/shared/js/jquery.js"></script>
 <script src="/shared/js/documentation.js"></script>
-<script src="https://tealium.hs.llnwd.net/o43/utag/rearden/main/qa/utag.js"></script>
+<script src="https://tealium.hs.llnwd.net/o43/utag/rearden/main/prod/utag.js"></script>
 </body>
 </html>
